--- a/Javascripts.html
+++ b/Javascripts.html
@@ -6,7 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>Gerador de Links</title>
+	<script  src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="jquery.mask.min.js"></script>
+
 </head>
 <body>
 	 <form id="forma">
@@ -19,16 +22,15 @@
 			<input type="text" class="form-control" id="msg" placeholder="Digite Sua Mensagem">
 		</div>
 	 </form>
-
 	<button type="submit" id="botao"  class="btn btn-primary" onclick="capturar()">Gerar Link</button>
-
 	<div class="Resultado">
 		Link Gerado:
 		<input type="text" class="form-control" id="copyy" placeholder="">
-		<!-- <a href="#" id=novoLink target="_blank"></a> -->
+		<button type="submit" id="botaoacessar"  class="btn btn-primary"><a href="#" id="goto" target="_blank">Acessar Link</button></a>
+	</input>
+	<a href="#" id=novoLink target="_blank"></a>
 	</div>
-
-
+ 
 	<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
 			<div class="toast-header">
 			  <img src="zap.png" class="rounded mr-2" alt="...">
@@ -41,14 +43,17 @@
 				Link copiado para area de transferencia
 			</div>
 		  </div>
-
-	<script  src="https://code.jquery.com/jquery-3.4.1.js"></script>
+		  <script>
+				$("#nmr").mask("(00) 00000-0000")
+		  </script>
 	<script>
 		var numero, mensagem;
 		function capturar(){
 			var numero = document.getElementById("nmr").value;
 			var mensagem = encodeURI(document.getElementById("msg").value);
 			var number = numero.replace(/\D/g, '');
+			number=number.replace(/^(d{2})(d)/g,"($1) $2"); //Coloca parênteses em volta dos dois primeiros dígitos
+    		number=number.replace(/(d)(d{4})$/,"$1-$2");    //Coloca hífen entre o quarto e o quinto dígitos
 			var x = number.substring(0,2)
 			var link = "https://wa.me/"+ number+"?text=" + mensagem
 			console.log(x)
@@ -56,10 +61,10 @@
 				link = "https://wa.me/"+ number+"?text=" + mensagem
 			}
 			else{
-			var link = "https://wa.me/55"+ number+"?text=" + mensagem
+			 link = "https://wa.me/55"+ number+"?text=" + mensagem
 			}
 			document.getElementById('copyy').innerHTML = link;
-			// document.getElementById('copyy').setAttribute("href",link);
+			document.getElementById('goto').setAttribute("href",link);
 			document.getElementById('copyy').value = link;
 			$('.toast').toast('show');
         };
